# cads-processing-api-service

./: .cruft.json  .gitignore  Dockerfile  Dockerfile.rej  Makefile  README.md  Retrieve.Dockerfile  environment-minver.yml  environment.dev  environment.stable  environment.yml  mul_http.py  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  on-push.yml
cads_processing_api_service/: __init__.py  adapters.py  adaptors.py  auth.py  cache.py  clients.py  config.py  constraints.py  costing.py  crud.py  db_utils.py  dbsession.py  dependencies.py  endpoints.py  exceptions.py  layers.py  limits.py  main.py  metrics.py  middlewares.py  models.py  response.py  rfc5424_log.py  serializers.py  testing.py  tracing.py  translators.py  utils.py
cads_processing_api_service/cads_common/: __init__.py  adaptor_util.py  date_tools.py  mapping.py
ci/: environment-ci.yml
docs/: adapters.md  conf.py  index.md
tests/: __init__.py  conftest.py  integration_test_10_clients.py  integration_test_20_datasets_retrieve.py  test_00_version.py  test_10_config.py  test_10_constraints.py  test_10_costing.py  test_10_settings.py  test_10_translators.py  test_20_adapters.py  test_20_adaptors.py  test_20_clients.py  test_20_layers.py  test_20_request.py  test_20_serializers.py  test_20_session.py  test_20_utils.py  test_30_auth.py  test_30_clients.py  test_30_costing.py  test_30_crud.py  test_30_limits.py  test_30_serializers.py  test_30_utils.py  test_40_adaptors.py  test_40_logger.py  test_40_metrics.py  test_40_response.py  testing.py
