[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "attrs",
  "cacholote",
  "cads-adaptors",
  "cads-broker",
  "cads-catalogue",
  "cads-common",
  "fastapi",
  "ogc-api-processes-fastapi",
  "pydantic>2",
  "pydantic-settings>2",
  "prometheus_client",
  "requests",
  "sqlalchemy>=2.0.9",
  "starlette_exporter",
  "structlog"
]
description = "CADS Processing API service"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-processing-api-service"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "syslog_rfc5424_formatter"
]

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools]
packages = ["cads_processing_api_service"]

[tool.setuptools_scm]
write_to = "cads_processing_api_service/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
