[metadata]
name = cads-processing-api-service
license = Apache License 2.0
description = CADS Processing API service
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
install_requires =
    attrs
    fastapi
    fastapi-utils
    cads-catalogue
    ogc-api-processes-fastapi
    psycopg2-binary
    sqlalchemy

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]

[mypy-cads_catalogue]
ignore_missing_imports = True

[mypy-psycopg2]
ignore_missing_imports = True
